--- a/Контакты.html
+++ b/Контакты.html
@@ -78,19 +78,19 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-a08f">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-btn-1">Личный блог в Telegram</a>
         <a href="https://t.me/adderlywindows" class="u-btn u-button-style u-btn-2">Telegram канал, о сборках</a>
         <a href="https://t.me/finework" class="u-btn u-button-style u-btn-3">Telegram канал моей компании</a>
         <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-4">Мой личный YouTube канал</a>
         <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-5">YouTube канал моей компании</a>
-        <a href="https://www.youtube.com/channel/UC4uzR5h-g2GrMNHbb6LIY1Q" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-6">YouTube канал моего очень хорошего друга</a>
+        <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-6">Тик ток моего очень хорошего друга</a>
         <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-border-none u-btn u-button-style u-btn-7">Мой личный TikTok аккаунт</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
       </div></footer>
