--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -85,17 +85,17 @@
           <br>
         </h3>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-palette-4-base u-radius-50 u-btn-1">Сборки Windows 7</a>
-        <a href="Windows-80-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-4 u-radius-50 u-btn-2">Сборки Windows 8.0</a>
-        <a href="Windows-81-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-radius-50 u-btn-4">Сборки Windows 10</a>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-radius-50 u-btn-5">Сборки Windows 11</a>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-50 u-btn-6">Windows Lite сборки</a>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-50 u-btn-2">Windows Lite сборки</a>
+        <a href="Windows-80-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-4 u-radius-50 u-btn-3">Сборки Windows 8.0</a>
+        <a href="Windows-81-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-radius-50 u-btn-5">Сборки Windows 10</a>
+        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-radius-50 u-btn-6">Сборки Windows 11</a>
         <p class="u-align-center u-text u-text-default u-text-2">Сайт открылся недавно, могут быть ошибки.</p>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
       </div></footer>
