--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -78,7 +78,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-795a">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-2">Windows 10 21H2 by Adderly (21.06.2022)<br>
@@ -115,11 +115,14 @@
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
         <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-3-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-2">Скачать Windows 10 1607 by Adderly</a>
+        <p class="u-text u-text-default u-text-6">Смотрите так же:</p>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-3">Сборки Windows 7</a>
+        <a href="Windows-81-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-4">Сборки Windows 8.1</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
       </div></footer>
