--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -78,7 +78,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-782f">
-      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 7</h1>
         <h6 class="u-text u-text-default u-text-2">Windows 7 V2 by Adderly (21.06.2022)<br>
         </h6>
@@ -101,11 +101,14 @@
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
         <a href="https://drive.google.com/file/d/1qijTiQv1ZGjT_A3ubJtlxBLZw50I4W2x/" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 7 V2 by Adderly</a>
+        <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
+        <a href="Windows-81-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-2">Сборки Windows 8.1</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-3">Сборки Windows 10</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
       </div></footer>
