--- a/Windows-81-сборки.html
+++ b/Windows-81-сборки.html
@@ -101,11 +101,14 @@
           <br>Образ основан на официальном MSDN Windows 8.1.
         </p>
         <a href="https://drive.google.com/file/d/1n5snBowFHWvQDoxpNV2G1GPa_RHGzmVX/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 8.1 V2 by Adderly</a>
+        <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-2">Сборки Windows 10</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-3">Сборки Windows 7</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
       </div></footer>
