--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -117,7 +117,7 @@
         <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-3-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-2">Скачать Windows 10 1607 by Adderly</a>
         <p class="u-text u-text-default u-text-6">Смотрите так же:</p>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-3">Сборки Windows 7</a>
-        <a href="Windows-81-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-4">Сборки Windows 8.1</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-4">Сборки Windows 8.1</a>
       </div>
     </section>
     
