--- a/Контакты.html
+++ b/Контакты.html
@@ -78,7 +78,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-a08f">
-      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-btn-1">Личный блог в Telegram</a>
         <a href="https://t.me/adderlywindows" class="u-btn u-button-style u-btn-2">Telegram канал, о сборках</a>
         <a href="https://t.me/finework" class="u-btn u-button-style u-btn-3">Telegram канал моей компании</a>
