--- a/FineWork.html
+++ b/FineWork.html
@@ -82,6 +82,9 @@
         <h4 class="u-align-center u-text u-text-1">В начале марта 2022, я придумал псевдоним для своих программ - FineWork.<br>А теперь, это дуэт, в котором мы с другом<br>создаем и улучшаем свои программы.<br>Мы так же имеем сайт.
         </h4>
         <a href="https://finework.tk/" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">FineWork.TK</a>
+        <a href="https://finework.tk/Product/FineWork-Type-Pro.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">FineWork Type PRO</a>
+        <a href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-3">FineWork Приложения</a>
+        <a href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-4">FineWork Игры</a>
       </div>
     </section>
     
