--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -78,7 +78,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-782f">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 7</h1>
         <h6 class="u-text u-text-default u-text-2">Windows 7 V2 by Adderly (21.06.2022)<br>
         </h6>
