--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-radius-50 u-btn-5">Сборки Windows 10</a>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-radius-50 u-btn-6">Сборки Windows 11</a>
-        <p class="u-align-center u-text u-text-default u-text-2">Сайт может содержать ошибки.</p>
+        <p class="u-align-center u-text u-text-2">Попробовав мои сборки, вы измените мнение о том, что все сборки ужасны. </p>
+        <p class="u-align-center u-text u-text-default u-text-3">Сайт новый, может содержать ошибки.</p>
+        <p class="u-align-center u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">Недавние новости</p>
+        <p class="u-align-center u-text u-text-default u-text-5">Я создал сайт, в котором вы в любое время можете скачать мои сборки!</p>
+        <p class="u-align-center u-text u-text-default u-text-6">В разработке:<br>Windows 10 1709 by Adderly
+        </p>
       </div>
     </section>
     
