--- a/Контакты.html
+++ b/Контакты.html
@@ -83,9 +83,10 @@
         <a href="https://t.me/adderlywindows" class="u-btn u-button-style u-btn-2">Telegram канал, о сборках</a>
         <a href="https://t.me/finework" class="u-btn u-button-style u-btn-3">Telegram канал моей компании</a>
         <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-4">Мой личный YouTube канал</a>
-        <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-5">Тик ток моего очень хорошего друга</a>
-        <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-6">YouTube канал моей компании</a>
+        <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-5">YouTube канал моей компании</a>
+        <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-6">Тик ток моего очень хорошего друга</a>
         <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-border-none u-btn u-button-style u-btn-7">Мой личный TikTok аккаунт</a>
+        <a href="https://www.donationalerts.com/r/finework" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-8">Поддержать FineWork</a>
       </div>
     </section>
     
