--- a/Контакты.html
+++ b/Контакты.html
@@ -78,14 +78,14 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-a08f">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-btn-1">Личный блог в Telegram</a>
         <a href="https://t.me/adderlywindows" class="u-btn u-button-style u-btn-2">Telegram канал, о сборках</a>
         <a href="https://t.me/finework" class="u-btn u-button-style u-btn-3">Telegram канал моей компании</a>
         <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-4">Мой личный YouTube канал</a>
         <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-5">YouTube канал моей компании</a>
         <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-6">Тик ток моего очень хорошего друга</a>
-        <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-border-none u-btn u-button-style u-btn-7">Мой личный TikTok аккаунт</a>
+        <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-btn u-button-style u-btn-7">Мой личный TikTok</a>
         <a href="https://www.donationalerts.com/r/finework" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-8">Поддержать FineWork</a>
       </div>
     </section>
