--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -43,23 +43,24 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
-          <a class="u-btn u-button-link u-button-style u-none u-text-black u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
+          <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-white u-border-palette-1-base u-button-style u-hover-white u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a>
-</li><li class="u-nav-item"><a class="u-active-white u-border-palette-1-base u-button-style u-hover-white u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
-</li><li class="u-nav-item"><a class="u-active-white u-border-palette-1-base u-button-style u-hover-white u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Контакты.html" style="padding: 10px 20px;">Контакты</a>
-</li><li class="u-nav-item"><a class="u-active-white u-border-palette-1-base u-button-style u-hover-white u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="FineWork.html" style="padding: 10px 20px;">FineWork</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Контакты.html" style="padding: 10px 20px;">Контакты</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -69,6 +70,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Контакты.html">Контакты</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a>
 </li></ul>
               </div>
@@ -77,11 +79,25 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-section-1" id="sec-0039">
+    <section class="u-clearfix u-grey-90 u-section-1" id="sec-0039">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.0<br>
         </h1>
-        <h1 class="u-text u-text-default u-text-2">Скоро...</h1>
+        <h6 class="u-text u-text-default u-text-2">Windows 8.0 V2 by Adderly (23.06.2022)<br>
+        </h6>
+        <h1 class="u-text u-text-default u-text-3">В процессе...</h1>
+        <p class="u-text u-text-default u-text-4"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>
+          <br>Добавлена папка KMS <br>
+          <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
+          <br>Интегрирован Framework 4.6<br>
+          <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64 <br>
+          <br>Добавлены темы "Архитектура, Персонажи, Лашдафты" из Windows 7 <br>
+          <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.1, 10 <br>
+          <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
+          <br>Образ весит X.XX GB, после установки Windows занимает XX GB. <br>
+          <br>Образ основан на официальном MSDN Windows 8.0.
+        </p>
       </div>
     </section>
     
