--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -43,23 +43,24 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
-          <a class="u-btn u-button-link u-button-style u-none u-text-black u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
+          <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-white u-border-palette-1-base u-button-style u-hover-white u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a>
-</li><li class="u-nav-item"><a class="u-active-white u-border-palette-1-base u-button-style u-hover-white u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
-</li><li class="u-nav-item"><a class="u-active-white u-border-palette-1-base u-button-style u-hover-white u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Контакты.html" style="padding: 10px 20px;">Контакты</a>
-</li><li class="u-nav-item"><a class="u-active-white u-border-palette-1-base u-button-style u-hover-white u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="FineWork.html" style="padding: 10px 20px;">FineWork</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Контакты.html" style="padding: 10px 20px;">Контакты</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -69,6 +70,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Контакты.html">Контакты</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a>
 </li></ul>
               </div>
@@ -77,14 +79,14 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-section-1" id="sec-795a">
+    <section class="u-clearfix u-grey-90 u-section-1" id="sec-795a">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-2">Windows 10 21H2 by Adderly (21.06.2022)<br>
         </h6>
-        <img class="u-image u-image-default u-image-1" src="images/photo_2022-06-21_21-47-42.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-21_21-47-422.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-image u-image-default u-image-1" src="images/photo_2022-06-21_21-47-422.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-21_21-47-42.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-3" src="images/photo_2022-06-21_21-47-43.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-4" src="images/photo_2022-06-21_21-47-411.jpg" alt="" data-image-width="1280" data-image-height="719">
         <p class="u-text u-text-default u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
@@ -98,11 +100,11 @@
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)
         </p>
         <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 10 21H2 by Adderly</a>
-        <h6 class="u-text u-text-default u-text-4">Windows 10 1607 by Adderly</h6>
-        <img class="u-image u-image-default u-image-5" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-image-6" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-image-7" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <h6 class="u-text u-text-default u-text-4">Windows 10 1607 by Adderly (22.06.2022)</h6>
+        <img class="u-expanded-width-sm u-image u-image-default u-image-5" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-6" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
         <p class="u-text u-text-default u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
           <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
           <br>Удалён OneDrive и Microsoft Defender из автозагрузки <br>
@@ -115,9 +117,24 @@
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
         <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-3-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-2">Скачать Windows 10 1607 by Adderly</a>
-        <p class="u-text u-text-default u-text-6">Смотрите так же:</p>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-3">Сборки Windows 7</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-4">Сборки Windows 8.1</a>
+        <h6 class="u-text u-text-default u-text-6">Windows 10 1709 by Adderly (22.06.2022)</h6>
+        <img class="u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows10x64-2022-06-22-21-41-26.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-10" src="images/Windows10x64-2022-06-22-21-41-54.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width u-image u-image-default u-image-11" src="images/Windows10x64-2022-06-22-21-41-11.png" alt="" data-image-width="1366" data-image-height="768">
+        <p class="u-text u-text-default u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся рег файлы,<br>чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
+          <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
+          <br>Удалён OneDrive из автозагрузки <br>
+          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, x86 и x64 <br>
+          <br>Интегрирован Framework 4.7.2 <br>
+          <br>Образ весит 4 GB, после установки Windows занимает 9 GB <br>
+          <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
+          <br>В этой сборке нет инсталяторов программ, и обоев.<br>
+          <br>Проверена на слабом ПК, отлично оптимизирована.
+        </p>
+        <a href="https://drive.google.com/file/d/1HAlkL0G0b92L0XEAlYZCocXKUHRMaYD0/view?usp=sharing" class="u-active-palette-3-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-3">Скачать Windows 10 1709 by Adderly</a>
+        <p class="u-text u-text-default u-text-8">Смотрите так же:</p>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-4">Сборки Windows 7</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-5">Сборки Windows 8.1</a>
       </div>
     </section>
     
