--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -83,7 +83,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.0<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-2">Windows 8.0 V2 by Adderly (23.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-2">Windows 8.0 V2 by Adderly (23-24.06.2022)<br>
         </h6>
         <h1 class="u-text u-text-default u-text-3">В процессе...</h1>
         <p class="u-text u-text-default u-text-4"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>
@@ -98,6 +98,10 @@
           <br>Образ весит X.XX GB, после установки Windows занимает XX GB. <br>
           <br>Образ основан на официальном MSDN Windows 8.0.
         </p>
+        <p class="u-text u-text-default u-text-5">Смотрите так же:</p>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-1">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-2">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-3">Сборки Windows 7</a>
       </div>
     </section>
     
