--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -106,7 +106,8 @@
         <a href="http://www.mediafire.com/file/a9wo007m4w5qlf2/Windows_8.1_V2_by_Adderly.iso" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-3">Сборки Windows 10</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-4">Сборки Windows 7</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-btn u-button-style u-btn-4">Сборки Windows 8.0</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
     
